{
    "name": "CameraInput",
    "maps": [
        {
            "name": "Camera",
            "id": "0f1f74c0-cf8b-4605-89fd-3d5c06616c4b",
            "actions": [
                {
                    "name": "LookAt",
                    "type": "Value",
                    "id": "f3326d29-15f2-457b-9ec1-73c2ab0e9980",
                    "expectedControlType": "Vector2",
                    "processors": "Clamp(min=-1,max=1)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "b72326fb-bb79-4823-bb6a-b5d5208f635b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstViewToggle",
                    "type": "Button",
                    "id": "a09740ec-fa6a-4964-9dfb-de9ee8eff498",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MapViewToggle",
                    "type": "Button",
                    "id": "48b6a2d5-a231-4a19-8553-80258d9726e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e6ac0c2c-c146-476d-bf7f-b4ac5815bde6",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "LookAt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "991fac23-6a92-4c79-a37b-b2d615d7e893",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5327bef-5927-4a72-8218-c54699b49e46",
                    "path": "<Keyboard>/#(V)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstViewToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e317c65-61be-41eb-87e0-3c2f32414f3f",
                    "path": "<Keyboard>/#(M)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapViewToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}